--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<script>
-    window.location.href="https://www.yuque.com/itdafei/it/"
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>DaFei's Space</title>
+</head>
+<body>
+    <script>
+        window.location.href = "https://www.yuque.com/itdafei/it/"
+    </script>
+</body>
+</html>
